Fix overflow

--- a/assets/styles/components/_footer.scss
+++ b/assets/styles/components/_footer.scss
@@ -2,6 +2,7 @@
   background: var(--kbin-footer-bg);
   color: var(--kbin-footer-text-color);
   margin-top: 3rem;
+  overflow: hidden;
   padding: 0 .5rem 3rem;
 
   .kbin-container {
