--- a/assets/styles/components/_header.scss
+++ b/assets/styles/components/_header.scss
@@ -3,6 +3,7 @@
   background: var(--kbin-header-bg);
   color: var(--kbin-header-text-color);
   font-size: .85rem;
+  overflow: hidden;
   position: relative;
   z-index: 10;
 
